
[TestConsistentTypeExportsRule/invalid-0 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type1 } from './consistent-type-exports';
     | ~~~~~~
---

[TestConsistentTypeExportsRule/invalid-1 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type1 as "🍎" } from './consistent-type-exports';
     | ~~~~~~
---

[TestConsistentTypeExportsRule/invalid-2 - 1]
Diagnostic 1: singleExportIsType (1:10 - 1:14)
Message: Type export Type1 is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type Type1`
   1 | export { Type1, value1 } from './consistent-type-exports';
     |          ~~~~~
---

[TestConsistentTypeExportsRule/invalid-3 - 1]
Diagnostic 1: singleExportIsType (2:10 - 2:14)
Message: Type export Type1 is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type Type1`
   1 | 
   2 | export { Type1, value1, value2 } from './consistent-type-exports';
     |          ~~~~~
   3 |       
---

[TestConsistentTypeExportsRule/invalid-4 - 1]
Diagnostic 1: multipleExportsAreTypes
Message: Type exports Type1 and Type2 are not values and should be exported using `export type`.
  Label: Type1 is a type export, try `type Type1` (2:10 - 2:14)
   1 | 
   2 | export { Type1, value1, Type2, value2 } from './consistent-type-exports';
     |          ^^^^^ Type1 is a type export, try `type Type1`
   3 |       
  Label: Type2 is a type export, try `type Type2` (2:25 - 2:29)
   1 | 
   2 | export { Type1, value1, Type2, value2 } from './consistent-type-exports';
     |                         ^^^^^ Type2 is a type export, try `type Type2`
   3 |       
---

[TestConsistentTypeExportsRule/invalid-5 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type2 as Foo } from './consistent-type-exports';
     | ~~~~~~
---

[TestConsistentTypeExportsRule/invalid-6 - 1]
Diagnostic 1: singleExportIsType (2:10 - 2:21)
Message: Type export Type2 as Foo is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type Type2 as Foo`
   1 | 
   2 | export { Type2 as Foo, value1 } from './consistent-type-exports';
     |          ~~~~~~~~~~~~
   3 |       
---

[TestConsistentTypeExportsRule/invalid-7 - 1]
Diagnostic 1: singleExportIsType (3:3 - 3:14)
Message: Type export Type2 as Foo is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type Type2 as Foo`
   2 | export {
   3 |   Type2 as Foo,
     |   ~~~~~~~~~~~~
   4 |   value1 as BScope,
---

[TestConsistentTypeExportsRule/invalid-8 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | import { Type2 } from './consistent-type-exports';
   3 | export { Type2 };
     | ~~~~~~
   4 |       
---

[TestConsistentTypeExportsRule/invalid-9 - 1]
Diagnostic 1: singleExportIsType (3:18 - 3:22)
Message: Type export Type2 is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type Type2`
   2 | import { value2, Type2 } from './consistent-type-exports';
   3 | export { value2, Type2 };
     |                  ~~~~~
   4 |       
---

[TestConsistentTypeExportsRule/invalid-10 - 1]
Diagnostic 1: multipleExportsAreTypes
Message: Type exports Alias and IFace are not values and should be exported using `export type`.
  Label: Alias is a type export, try `type Alias` (9:10 - 9:14)
   8 | 
   9 | export { Alias, IFace, TypeNS };
     |          ^^^^^ Alias is a type export, try `type Alias`
  10 |       
  Label: IFace is a type export, try `type IFace` (9:17 - 9:21)
   8 | 
   9 | export { Alias, IFace, TypeNS };
     |                 ^^^^^ IFace is a type export, try `type IFace`
  10 |       
---

[TestConsistentTypeExportsRule/invalid-11 - 1]
Diagnostic 1: typeOverValue (6:1 - 6:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   5 | 
   6 | export { TypeNS };
     | ~~~~~~
   7 |       
---

[TestConsistentTypeExportsRule/invalid-12 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | type T = 1;
   3 | export { type T, T };
     | ~~~~~~
   4 |       
---

[TestConsistentTypeExportsRule/invalid-13 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | type T = 1;
   3 | export { type/* */T, type     /* */T, T };
     | ~~~~~~
   4 |       
---

[TestConsistentTypeExportsRule/invalid-14 - 1]
Diagnostic 1: singleExportIsType (4:18 - 4:18)
Message: Type export T is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type T`
   3 | const x = 1;
   4 | export { type T, T, x };
     |                  ~
   5 |       
---

[TestConsistentTypeExportsRule/invalid-15 - 1]
Diagnostic 1: singleExportIsType (4:10 - 4:10)
Message: Type export T is not a value and should be exported using `export type`.
Help: Try adding the `type` keyword: `type T`
   3 | const x = 1;
   4 | export { T, x };
     |          ~
   5 |       
---

[TestConsistentTypeExportsRule/invalid-16 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:6)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | type T = 1;
   3 | export { type T, T };
     | ~~~~~~
   4 |       
---

[TestConsistentTypeExportsRule/invalid-17 - 1]
Diagnostic 1: multipleExportsAreTypes
Message: Type exports Type1 and Type2 as Foo are not values and should be exported using `export type`.
  Label: Type1 is a type export, try `type Type1` (3:3 - 3:7)
   2 | export {
   3 |   Type1,
     |   ^^^^^ Type1 is a type export, try `type Type1`
   4 |   Type2 as Foo,
  Label: Type2 as Foo is a type export, try `type Type2 as Foo` (4:3 - 4:14)
   3 |   Type1,
   4 |   Type2 as Foo,
     |   ^^^^^^^^^^^^ Type2 as Foo is a type export, try `type Type2 as Foo`
   5 |   type value1 as BScope,
---

[TestConsistentTypeExportsRule/invalid-18 - 1]
Diagnostic 1: multipleExportsAreTypes
Message: Type exports Type1 and Type2 as Foo are not values and should be exported using `export type`.
  Label: Type1 is a type export, try `type Type1` (3:3 - 3:7)
   2 | export {
   3 |   Type1,
     |   ^^^^^ Type1 is a type export, try `type Type1`
   4 |   Type2 as Foo,
  Label: Type2 as Foo is a type export, try `type Type2 as Foo` (4:3 - 4:14)
   3 |   Type1,
   4 |   Type2 as Foo,
     |   ^^^^^^^^^^^^ Type2 as Foo is a type export, try `type Type2 as Foo`
   5 |   type value1 as BScope,
---

[TestConsistentTypeExportsRule/invalid-19 - 1]
Diagnostic 1: typeOverValue (2:9 - 2:14)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | 
   2 |         export * from './consistent-type-exports/type-only-exports';
     |         ~~~~~~
   3 |       
---

[TestConsistentTypeExportsRule/invalid-20 - 1]
Diagnostic 1: typeOverValue (2:25 - 2:30)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | 
   2 |         /* comment 1 */ export
     |                         ~~~~~~
   3 |           /* comment 2 */ *
---

[TestConsistentTypeExportsRule/invalid-21 - 1]
Diagnostic 1: typeOverValue (2:9 - 2:14)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | 
   2 |         export * from './consistent-type-exports/type-only-reexport';
     |         ~~~~~~
   3 |       
---

[TestConsistentTypeExportsRule/invalid-22 - 1]
Diagnostic 1: typeOverValue (2:9 - 2:14)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | 
   2 |         export * as foo from './consistent-type-exports/type-only-reexport';
     |         ~~~~~~
   3 |       
---

[TestConsistentTypeExportsRule/invalid-23 - 1]
Diagnostic 1: typeOverValue (4:9 - 4:14)
Message: All exports in the declaration are only used as types. Use `export type`.
   3 |         type Foo = 1;
   4 |         export { Foo };
     |         ~~~~~~
   5 |       
---

[TestConsistentTypeExportsRule/invalid-24 - 1]
Diagnostic 1: typeOverValue (3:9 - 3:14)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 |         import { type NAME as Foo } from './consistent-type-exports';
   3 |         export { Foo };
     |         ~~~~~~
   4 |       
---
